SDM-2641: Add post-actions to integration flow.